# libCello

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  biicode.conf
